--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,8 @@
 .header{
     grid-area: h;
-    background-color: white ;
+    background-color: cadetblue;
 }
 .header img{
-    width: 120px;
+    width: 250px;
+    height: 60px;
 }
