--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,13 @@
 
 .content{
     grid-area: c;
-    background-color: aquamarine;
+    background-color: white;
 }
 
 .img{
     width: 120px;
+}
+.fon {
+    width: 1000px;
+    height: 170px;
 }
