--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ width: 1200px;
 "h h"
 "n c";
   grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  /*grid-gap: 10px;*/
+  grid-template-columns:1fr 1000px;
+  grid-gap: 10px;
 }
 
