--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,12 +2,14 @@
 .nav{
     grid-area: n;
     background-color: cadetblue;
+    padding: 20px;
 }
 
-.item {
+.item a{
     color: white;
+    text-decoration: none ;
 }
 
-.item.active {
-    color: crimson;
+.item a.activeLink {
+    color: gold;
 }
